# EntropyCore

./: .gitignore  CMakeLists.txt  CODESTYLE.md  DOCUMENTATION.md  README.md  autobuild.xml  build-cmd.ps1  build-cmd.sh  vcpkg-configuration.json  vcpkg.json
.github/: release.yaml
.github/workflows/: build.yaml
Examples/: WorkContractExample.cpp  WorkContractExample.h  WorkGraphYieldableExample.cpp
Tests/: DebugInterfaceTests.cpp  GraphTests.cpp  LoggingTests.cpp  MainThreadWorkTest.cpp  SignalTreeTests.cpp  TestWorkServiceSingleton.h  TypeSystemTests.cpp  WorkContractGroupAccountingTests.cpp  WorkContractGroupTests.cpp  WorkContractHighContentionTest.cpp  WorkGraphArchitectureTests.cpp  WorkGraphDebugTest.cpp  WorkGraphIsolatedHangTest.cpp  WorkGraphMainThreadTest.cpp  WorkGraphMemoryTest.cpp  WorkGraphServiceIntegrationTests.cpp  WorkGraphSimpleTest.cpp  WorkGraphTests.cpp  WorkGraphVectorTest.cpp  WorkServiceTests.cpp
cmake/: EntropyCoreConfig.cmake.in
src/: CoreCommon.h  EntropyCore.h  ServiceLocator.h
src/Concurrency/: AdaptiveRankingScheduler.cpp  AdaptiveRankingScheduler.h  DirectScheduler.h  IConcurrencyProvider.h  IWorkScheduler.h  NodeScheduler.cpp  NodeScheduler.h  NodeStateManager.cpp  NodeStateManager.h  RandomScheduler.cpp  RandomScheduler.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  SignalTree.h  SpinningDirectScheduler.h  WorkContractGroup.cpp  WorkContractGroup.h  WorkContractHandle.cpp  WorkContractHandle.h  WorkGraph.cpp  WorkGraph.h  WorkGraphEvents.h  WorkGraphTypes.h  WorkService.cpp  WorkService.h
src/Core/: EventBus.h
src/Debug/: Debug.h  DebugUtilities.h  INamed.h  Profiling.h
src/Graph/: AcyclicNodeHandle.h  DirectedAcyclicGraph.h
src/Logging/: ConsoleSink.cpp  ConsoleSink.h  ILogSink.h  LogEntry.h  LogLevel.h  Logger.cpp  Logger.h
src/TypeSystem/: GenericHandle.h  Reflection.h  TypeID.h
triplets/: universal-osx.cmake
